<resources>
    <string name="app_name">DailyNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- toast message context -->
    <string name="toast_exit_app">앱을 종료하시겠습니까?</string>

    <!-- bottom navigation -->
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_search">검색</string>
    <string name="bottom_navigation_headline">헤드라인</string>
    <string name="bottom_navigation_save">저장</string>
    <string name="bottom_navigation_setting">설정</string>

    <!-- button context -->
    <string name="button_positive">확인</string>
    <string name="button_negative">취소</string>

    <!-- value -->
    <string name="value_dimension_ratio">16:10</string>

    <!-- description -->
    <string name="description_news_image">뉴스 이미지</string>
    <string name="description_new_image">New 이미지</string>
    <string name="description_save_image">save 이미지</string>
    <string name="description_empty_box_image">빈 박스 이미지</string>
    <string name="description_image_close">닫기 이미지</string>
    <string name="description_image_banner">배너 이미지</string>


    <!-- Content Title -->
    <string name="content_breaking_news_title_text">Recent news</string>

    <!-- Content Empty -->
    <string name="content_empty_title">empty title</string>
    <string name="content_no_network_connection">인터넷 연결을 확인해주세요.</string>

</resources>