<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.hy.dailynews.models.News" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_thumbnails"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_thumbnails_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bindTitleImg="@{data.image}"
                android:contentDescription="@string/description_news_image"
                android:src="@mipmap/image_news"
                tools:scaleType="fitXY"
                tools:src="@mipmap/image_news" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/news_cycle_bold"
            android:maxLines="2"
            android:text="@{data.title.empty ? String.valueOf(data.title) : data.title}"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="@{data.title.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_new"
            app:layout_constraintStart_toEndOf="@+id/cv_thumbnails"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="[아시아 경제 조슬기나 기자] 구글 무임승차에도, 국회는 시간끌기..힘 빠진 구글 갑질 방지법 어떠나" />

        <ImageView
            android:id="@+id/iv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_new_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_contents"
            app:layout_constraintTop_toTopOf="@+id/tv_contents"
            tools:src="@drawable/ic_new" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cafe24ohsquare"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_contents"
            app:layout_constraintTop_toBottomOf="@+id/tv_contents"
            tools:text="1 minute ago" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/description_save_image"
            android:focusable="true"
            android:src="@drawable/ic_save_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            tools:src="@drawable/ic_save_off" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>